# landing_multi_marker

apriltag_ros/apriltag_ros/config/: settings.yaml  tags.yaml
apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
aruco_detect/: CMakeLists.txt  package.xml
aruco_detect/src/: aruco_detector.cpp
aruco_gridboard/data/: layout.yaml
aruco_gridboard/launch/: detection.launch
aruco_gridboard/src/: node.cpp
aruco_ros/aruco_ros/launch/: marker_publisher.launch  single.launch
aruco_ros/aruco_ros/src/: marker_publish.cpp  simple_single.cpp
offboard_control/: CMakeLists.txt
offboard_control/include/offboard_control/: controller_uav.h
offboard_control/launch/: controller_pid.launch
offboard_control/src/: controller_uav.cpp
ros_viz/: CMakeLists.txt  README.md  package.xml
ros_viz/launch/: visualize.launch
ros_viz/rviz/: local_pos_marker.rviz
ros_viz/src/: marker.cpp
whycon/launch/: whycon.launch
whycon/launch/custom/: vrep.launch
whycon/src/ros/: set_axis.cpp  transformer.cpp  whycon_ros.cpp
